# static/oas/restful-api-sample_mcp-config.yaml
@@ -181,6 +181,37 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/OperationResponse'
+  /custom/configs/:
+    get:
+      responses:
+        '200':
+          description: Inforamtion
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                    name:
+                      type: string
+  /custom/configs/{configurationId}:
+    get:
+      responses:
+        '200':
+          description: Inforamtion
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    x-restfului-link: /custom/configs/{id}
+                  name:
+                    type: string
 
 components:
   schemas:
